MDSAL-294: Binding v1 generator - Add @CheckReturnValue on RPC methods
-  Use @CheckReturnValue annotation in static code analysis
to ensure that all users of the RPC do check the Future RpcResult
 for errors - even if there is no Output.

Change-Id: I7b4e5f0d7ca81db154a39325490a46bfcf8820a4
Signed-off-by: Jie Han <han.jie@zte.com.cn>

--- a/common/features/odl-mdsal-binding-runtime/pom.xml
+++ b/common/features/odl-mdsal-binding-runtime/pom.xml
@@ -46,6 +46,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>annotations</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.odlparent</groupId>
             <artifactId>odl-javassist-3</artifactId>
             <type>xml</type>
