--- a/binding/mdsal-binding-generator-impl/pom.xml
+++ b/binding/mdsal-binding-generator-impl/pom.xml
@@ -46,6 +46,10 @@
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>annotations</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
