Fix odl-mdsal-dom-schema-service-osgi definition
This should be pulling in odl-mdsal-dom-broker for proper
feature dependency. Fix that.

Change-Id: I4d86ef614e226d4d4ae315a92f99476cad6f2016
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/common/features/odl-mdsal-dom-schema-service-osgi/pom.xml
+++ b/common/features/odl-mdsal-dom-schema-service-osgi/pom.xml
@@ -40,6 +40,12 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>odl-mdsal-dom-broker</artifactId>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>mdsal-dom-schema-service-osgi</artifactId>
         </dependency>
     </dependencies>
