--- a/project.config
+++ b/project.config
@@ -9,3 +9,5 @@
 	read = group GitHub Replication
 [submit]
 	action = rebase if necessary
+[allowSuperproject "releng/autorelease"]
+	matching = refs/heads/master:refs/heads/master
