--- a/project.config
+++ b/project.config
@@ -10,4 +10,4 @@
 [submit]
 	action = rebase if necessary
 [allowSuperproject "releng/autorelease"]
-	matching = refs/heads/stable/boron:refs/heads/stable/boron
+	matching = refs/heads/stable/carbon:refs/heads/stable/carbon
