--- a/dom/mdsal-dom-inmemory-datastore/pom.xml
+++ b/dom/mdsal-dom-inmemory-datastore/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>bundle-parent</artifactId>
-        <version>3.0.2</version>
+        <version>3.0.3-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
