Eliminate odl-mdsal-dom-schema-service-osgi
This is osgi-specific bundle and since karaf is all about OSGi,
we should not pretend odl-mdsal-dom-broker feature can work without
it. Eliminate the feature, bundling the artifact inside
odl-mdsal-dom-broker instead.

Change-Id: I8436d331ff391c72593bfb03aa0aeb422dee4c49
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/common/features/odl-mdsal-dom-broker/pom.xml
+++ b/common/features/odl-mdsal-dom-broker/pom.xml
@@ -75,10 +75,8 @@
             <artifactId>mdsal-dom-broker</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.mdsal</groupId>
-            <artifactId>odl-mdsal-dom-schema-service-osgi</artifactId>
-            <type>xml</type>
-            <classifier>features</classifier>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>mdsal-dom-schema-service-osgi</artifactId>
         </dependency>
     </dependencies>
 
