--- a/binding2/mdsal-binding2-generator-impl/pom.xml
+++ b/binding2/mdsal-binding2-generator-impl/pom.xml
@@ -83,7 +83,7 @@
 
         <dependency>
             <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
+            <artifactId>commons-text</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
