--- a/binding/mdsal-binding-generator-impl/pom.xml
+++ b/binding/mdsal-binding-generator-impl/pom.xml
@@ -76,7 +76,7 @@
 
         <dependency>
             <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
+            <artifactId>commons-text</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
